# WarpDesk

./: .gitignore  README.md  start_all.bat  start_all.sh
Official Builds/: README.md
Official Builds/Linux/: BUILD_ON_LINUX.md
Official Builds/macOS/: BUILD_ON_MACOS.md
agent/: .env.example  README.md  app.py  requirements.txt  selkies_gst_presets.py  selkies_windows_launcher.py
agent/tauri-control/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
agent/tauri-control/src/: main.js  styles.css
agent/tauri-control/src-tauri/: Cargo.toml  tauri.conf.json
agent/tauri-control/src-tauri/src/: main.rs
web/: desktop.css  desktop.html  desktop.js  index.html  login.js  style.css  webrtc.js
