[package]
name = "warpdesk-control"
version = "0.1.0"
description = "WarpDesk Tauri Sidecar Control"
authors = ["WarpDesk"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[[bin]]
name = "warpdesk-control"
path = "src/main.rs"
